# beem-sms-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
beem_sms/: __init__.py  cli.py  client.py  exceptions.py  validators.py
docs/: conf.py  project.md
tests/: conftest.py  test_client.py  test_validators.py
